--- a/index.html
+++ b/index.html
@@ -4,9 +4,45 @@
     <style>
   .my-div {
     padding: 20px;
-    margin: 10px;
+    margin: 5px;
     border: 1px solid black;
   }
+    </style>
+    <style>
+      .my-p {
+        padding: 1px;
+        margin: 5px;
+        border: 1px solid black;
+      }
+    </style>
+    <style>
+      .my-span {
+        padding: 1px;
+        margin: 5px;
+        border: 1px solid red;
+      }
+    </style>
+    <style>
+      .my-strong {
+        padding: 1px;
+        margin: 5px;
+        border: 1px solid blue;
+      }
+    </style>
+     <style>
+      .my-dash {
+        padding: 1px;
+        margin: 0px;
+        border: 1px dashed red;
+      }
+    </style>
+     <style>
+      .my-inline {
+        display: inline;
+        padding: 1px;
+        margin: 1px;
+        border: 1px dashed red;
+      }
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,5 +64,28 @@
 <div class="my-div">
     This is a block-level div element.
   </div>
+  <p class="my-p">
+This is a block-level paragraph element.
+  </p>
+<h2>What are Inline Elements?</h2>
+<p>Inline elements only take up as much width as necessary and do not start on a new line.</p>
+<p>Examples Include: &lt;span&gt;, &lt;a&gt;, &lt;strong&gt;</p>
+<p>This is a paragraph with an<span class="my-span">inline span element</span>inside.</p>
+<p>This text contains<strong class= "my-strong">inline strong text</strong>that flows in line.</p>
+<h2>Comparison</h2>
+<p>Block elements stack vertically, while inline elements flow horizontally in the same line.</p>
+<br>
+<div class="my-dash">block element</div>
+<div class="my-dash">block element</div>
+<div class="my-dash">block element</div>
+<div class="my-dash">block element</div>
+<div class="my-dash">block element</div>
+<br>
+<p class="my-inline">inline element</p>
+<p class="my-inline">inline element</p>
+<p class="my-inline">inline element</p>
+<p class="my-inline">inline element</p>
+<p class="my-inline">inline element</p>
+<p>© 2025 Block vs Inline Elements Tutorial</p>
 </body>
 </html>
