--- a/examples.html
+++ b/examples.html
@@ -55,6 +55,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Block vs Inline Elements</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -108,5 +109,4 @@
   </section>
   <p>© 2025 Block vs Inline Elements Tutorial</p>
 </body>
-
 </html>
