--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Block vs Inline Elements</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -56,7 +57,7 @@
             <a href="examples.html">Examples</a>
         </nav>
     </header>
-<h1>Understanding Block vs Inline Elements</h1>
+<h1 id="main-title">Understanding Block vs Inline Elements</h1>
 <h2>Using Semantic Tags & Including a Practice Form</h2>
 <h2>What are Block Elements?</h2>
 <p>Block elements take up the full width available and <strong>always start on a new line.</strong></p>
